syntax = "proto3";

package catalog.v1;

option go_package = "github.com/example/anime-platform/gen/catalog/v1;catalogv1";

message Episode {
  string id = 1;
  string anime_id = 2;
  int32 number = 3;
  string title = 4;
  string aired_at_rfc3339 = 5;
}

message GetEpisodesByIDsRequest {
  repeated string episode_ids = 1;
}

message GetEpisodesByIDsResponse {
  repeated Episode episodes = 1;
}

service CatalogService {
  rpc GetEpisodesByIDs(GetEpisodesByIDsRequest) returns (GetEpisodesByIDsResponse);
}
